--- a/Image-version.html
+++ b/Image-version.html
@@ -459,6 +459,10 @@
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script type="text/javascript">
+    var currentYear = new Date().getFullYear();
+    document.getElementById("copyYear").innerHTML = currentYear;
+  </script>
 
 
 
