--- a/es-Galaxy.html
+++ b/es-Galaxy.html
@@ -456,13 +456,12 @@
     </section>
 
     <!-- footer -->
-    <section id="contact" data-midnight="dark" class="dark-bg">
-      <div class="container project-detail wow padtop_30">
+    <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+      <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
             <h2 class="white-text subtitle bottom_30">Contacto</h2>
           </div>
-
           <div class="col-lg-2 bottom_30">
             <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a>
           </div>
@@ -479,12 +478,13 @@
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <p class="copyright">© Peter Verastegui</p>
+            <p class="white-text">
+              &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
         </div>
       </div>
       </div>
-    </section>
+    </footer>
 
   </main>
 
@@ -493,6 +493,10 @@
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script type="text/javascript">
+    var currentYear = new Date().getFullYear();
+    document.getElementById("copyYear").innerHTML = currentYear;
+  </script>
 
 
 </body>
