--- a/toucan/index.html
+++ b/toucan/index.html
@@ -121,7 +121,8 @@
         <div class="col masonry">
           <div class="item">
             <a href="work-1.html">
-              <img loading="lazy" class="work-thumbnail d-block w-100 mt-4" src="img/works/work-3/work-3-thumbnail.jpg">
+              <img loading="lazy" class="work-thumbnail d-block w-100 mt-4"
+                src="img/works/work-7/pexels-neemias-seara-3680316.jpg">
             </a>
           </div>
           <div class="item">
@@ -134,20 +135,13 @@
           <div class="item">
             <a href="work-1.html">
               <img loading="lazy" class="work-thumbnail d-block w-100 mt-4"
-                src="img/works/work-1/pexels-steve-johnson-1724888.jpg">
-            </a>
-          </div>
-
-          <div class="item">
-            <a href="work-1.html">
-              <img loading="lazy" class="work-thumbnail d-block w-100 mt-4"
-                src="img/works/work-6/prints-by-jfl-w-23FJx9e8c-unsplash.jpg">
+                src="img/works/work-1/geordanna-cordero-5NE6mX0WVfQ-unsplash.jpg">
             </a>
           </div>
           <div class="item">
             <a href="work-1.html">
               <img loading="lazy" class="work-thumbnail d-block w-100 mt-4"
-                src="img/works/work-5/pexels-rfstudio-3817580.jpg">
+                src="img/works/work-5/pexels-isabella-mendes-1304469.jpg">
             </a>
           </div>
           <div class="item">
@@ -172,8 +166,7 @@
           </div>
           <div class="item">
             <a href="work-1.html">
-              <img loading="lazy" class="work-thumbnail d-block w-100 mt-4"
-                src="img/works/work-7/christopher-campbell-yTGnaSQU9zk-unsplash.jpg">
+              <img loading="lazy" class="work-thumbnail d-block w-100 mt-4" src="img/works/work-3/work-3-thumbnail.jpg">
             </a>
           </div>
           <div class="item">
@@ -248,9 +241,8 @@
     <div class="container padtop_30">
       <div class="row">
         <div class="col-lg-12 padding_30">
-          <p class="copyright text-center text-color">© Toucan</p>
+          <p class="copyright text-center text-color">&copy;&nbsp;<span id="copyYear"></span>&nbsp;Toucan</p>
         </div>
-
       </div>
     </div>
   </footer>
@@ -265,6 +257,12 @@
 
   <!-- smooth scroll script -->
   <script src="vendor/scroll/scrolling-nav.js"></script>
+
+  <!-- Automatically update copyright year script -->
+  <script type="text/javascript">
+    var currentYear = new Date().getFullYear();
+    document.getElementById("copyYear").innerHTML = currentYear;
+  </script>
 
   <!-- Custom JavaScript for toggling themes -->
   <script>
