--- a/toucan/work-1.html
+++ b/toucan/work-1.html
@@ -192,9 +192,8 @@
         <div class="container padtop_30">
             <div class="row">
                 <div class="col-lg-12 padding_30">
-                    <p class="copyright text-center text-color">© Toucan</p>
+                    <p class="copyright text-center text-color">&copy;&nbsp;<span id="copyYear"></span>&nbsp;Toucan</p>
                 </div>
-
             </div>
         </div>
     </footer>
@@ -209,6 +208,12 @@
 
     <!-- smooth scroll script -->
     <script src="vendor/scroll/scrolling-nav.js"></script>
+
+    <!-- Automatically update copyright year script -->
+    <script type="text/javascript">
+        var currentYear = new Date().getFullYear();
+        document.getElementById("copyYear").innerHTML = currentYear;
+    </script>
 
     <!-- Custom JavaScript for toggling themes -->
     <script>
