--- a/toucan/work-2.html
+++ b/toucan/work-2.html
@@ -273,9 +273,8 @@
         <div class="container padtop_30">
             <div class="row">
                 <div class="col-lg-12 padding_30">
-                    <p class="copyright text-center text-color">© Toucan</p>
+                    <p class="copyright text-center text-color">&copy;&nbsp;<span id="copyYear"></span>&nbsp;Toucan</p>
                 </div>
-
             </div>
         </div>
     </footer>
@@ -291,8 +290,20 @@
     <!-- smooth scroll script -->
     <script src="vendor/scroll/scrolling-nav.js"></script>
 
+    <!-- Automatically update copyright year script -->
+    <script type="text/javascript">
+        var currentYear = new Date().getFullYear();
+        document.getElementById("copyYear").innerHTML = currentYear;
+    </script>
+
     <!-- smooth scroll script -->
     <script src="vendor/scroll/scrolling-nav.js"></script>
+
+    <!-- Automatically update copyright year script -->
+    <script type="text/javascript">
+        var currentYear = new Date().getFullYear();
+        document.getElementById("copyYear").innerHTML = currentYear;
+    </script>
 
     <!-- Custom JavaScript for toggling themes -->
     <script>
