Updated Colors and Galaxy project

--- a/Image-version.html
+++ b/Image-version.html
@@ -353,7 +353,8 @@
               </div>
             </div>
           </div>
-        </div> <!-- testimonials end -->
+        </div>
+        <!-- testimonials end -->
       </div>
     </section>
 
