--- a/es-Galaxy.html
+++ b/es-Galaxy.html
@@ -126,7 +126,7 @@
       <div class="row lightbox-gallery">
 
         <div class="col-lg-10 offset-lg-1 col-md-12 col-sm-12 cl-xs-12">
-          <h2 class="title text-center white-text">¿Por qué la mas pequeña?</h2>
+          <h2 class="title text-center white-text bottom_30">¿Por qué la mas pequeña?</h2>
           <p class="white-text bottom_60">Para resumirlo: eso fue una mala experiencia de usuario. Pensando como un
             diseñador de experiencias dije «al agente "J" no solo le están jugando una broma, el esta siendo víctima de
             un proceso de integración ineficiente». Si se dan cuenta el llegó a ese lugar sin haber llenado ningún
@@ -195,7 +195,7 @@
                   <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
                 </div>
                 <h2 class="subtitle white-text bottom_30">Agente "J"</h2>
-                <p class="white-text">En el trabajo las cosas se puede volverse trágicas en cualquier momento. Algunos
+                <p class="grey-text">En el trabajo las cosas se puede volverse trágicas en cualquier momento. Algunos
                   colegas pagarían lo que
                   sea por volver a sentir la adrenalina que solían sentir antes de haberse mudado a sus comodas
                   oficinas.
@@ -211,7 +211,7 @@
                   <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
                 </div>
                 <h2 class="subtitle white-text bottom_30">Supervisor</h2>
-                <p class="project-detail white-text">Mis colegas ponen sus vidas en riesgo todos los días y, como su
+                <p class="project-detail grey-text">Mis colegas ponen sus vidas en riesgo todos los días y, como su
                   supervisor, siento
                   como si me hubieran encargado sus vidas. Por esa razón haré lo que este a mi alcance, para proveerles
                   seguridad y asistirlos en lo que necesiten. «su seguridad es esencial, sin importar lo que cueste».
@@ -225,7 +225,7 @@
                   <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
                 </div>
                 <h2 class="subtitle white-text bottom_30">Directora Financiera</h2>
-                <p class="white-text">Yo estoy encargada del dinero, a mi parecer algunas personas creen que todas las
+                <p class="grey-text">Yo estoy encargada del dinero, a mi parecer algunas personas creen que todas las
                   misiones son una
                   película de Hollywood. Cada ves que alguien sale a trabajar y me cuesta mas dinero del necesario yo
                   soy la
@@ -255,31 +255,52 @@
             </div>
             <div class="row">
               <div class="col-lg-12 bottom_120">
-                <h2 class="text text-center title">Diseñando un sistema
+                <h2 class="text-center title text-white">Diseñando un sistema
                   de gestión de solicitudes</h2>
               </div>
             </div>
             <!-- Images -->
             <div class="row lightbox-gallery">
+              <!-- Description  -->
+              <div class="col-lg-5">
+                <h4 class="text-white">Todo comienza con un formulario</h4>
+                <p class="bottom_30 grey-text">
+                  Aquí el agente J puede comenzar su solicitud, apropiadamente, al proveer detalles de su misión como:
+                  en donde es, cuando comienza, y que tipo de armamento le gustaría usar.
+                </p>
+              </div>
+              <!-- Description -->
               <!-- a image -->
-              <div class="col-lg-10 offset-lg-1">
+              <div class="col-lg-7">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/New-Request-Low-Fidelity.png"
                     alt="New Request Low Fidelity">
                 </div>
               </div>
+              <!-- a image -->
             </div>
             <!-- Images -->
-
             <!-- Images -->
             <div class="row lightbox-gallery">
+              <!-- Description  -->
+              <div class="col-lg-5">
+                <h4 class="text-white">Luego continua en el registro de peticiones</h4>
+                <p class="grey-text">
+                  Aquí los usuarios pueden rastrear el estatus de sus solicitudes, desde el momento en que se envían
+                  hasta
+                  el día en que se aprueban.
+                </p>
+              </div>
+              <!-- Description -->
               <!-- a image -->
-              <div class="col-lg-10 offset-lg-1">
+              <div class="col-lg-7">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/Security-Ledger-Low-Fidelity.png"
                     alt="Request Ledger">
                 </div>
               </div>
+              <!-- an image -->
+
             </div>
             <!-- Images -->
           </div>
@@ -293,7 +314,11 @@
 
         <section data-midnight="dark" class="purple-gradient-galaxy-bg">
           <div class="container project-detail">
-
+            <div class="row">
+              <div class="col-lg-12 bottom_120">
+                <h4 class="text text-center text-white">Producto Final</h4>
+              </div>
+            </div>
 
 
             <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
@@ -433,7 +458,7 @@
             </div>
             <!-- Images -->
             <div class="top_60 project-detail col-lg-12">
-              <p class="text-center white-text">Gracias por visitar mi proyecto...ahora tienes que olvidar lo que
+              <p class="text-center grey-text">Gracias por visitar mi proyecto...ahora tienes que olvidar lo que
                 viste...</p>
             </div>
         </section>
