--- a/es.html
+++ b/es.html
@@ -226,7 +226,8 @@
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
-          <p class="padtop_60">Hola, soy Peter. un diseñador que empezó su carrera como un estudiante de arte lleno de
+          <p class="padtop_60 grey-text">Hola, soy Peter. un diseñador que empezó su carrera como un estudiante de arte
+            lleno de
             curiosidad. Aquella curiosidad me llevo del diseño gráfico a la animación digital y de la animación al
             UX/UI.
             Hoy en día me doy cuenta que, sin importar el trabajo que tomo, siempre estoy diseñado experiencias y
@@ -266,7 +267,7 @@
 
 
           <h3 class="white-text bottom_15">FINRA</h3>
-          <p class="padbot_30">Diseñador UX,<br> Feb 2019 – Presente,<br> Maryland, EE. UU.</p>
+          <p class="padbot_30 grey-text">Diseñador UX,<br> Feb 2019 – Presente,<br> Maryland, EE. UU.</p>
 
 
         </div>
@@ -274,7 +275,7 @@
 
 
           <h3 class="white-text bottom_15">Subject Matter</h3>
-          <p class="padbot_30">Diseñador UX,<br> Ene. 2018 – Feb 2019,<br> Washington, D. C., EE. UU.</p>
+          <p class="padbot_30 grey-text">Diseñador UX,<br> Ene. 2018 – Feb 2019,<br> Washington, D. C., EE. UU.</p>
 
 
         </div>
@@ -282,7 +283,7 @@
 
 
           <h3 class="white-text bottom_15">PBS NewsHour</h3>
-          <p class="padbot_30">Animador Digital,<br> Nov. 2017 – Ene. 2018,<br> Virginia, EE. UU.</p>
+          <p class="padbot_30 grey-text">Animador Digital,<br> Nov. 2017 – Ene. 2018,<br> Virginia, EE. UU.</p>
 
 
         </div>
@@ -301,7 +302,7 @@
 
 
           <h3 class="white-text bottom_15">USA Today</h3>
-          <p class="padbot_30">Diseñador Grafico,<br> Abr. 2017 – Jul. 2017,<br> Virginia, EE. UU.</p>
+          <p class="padbot_30 grey-text">Diseñador Grafico,<br> Abr. 2017 – Jul. 2017,<br> Virginia, EE. UU.</p>
 
 
         </div>
@@ -309,7 +310,8 @@
 
 
           <h3 class="white-text bottom_15">National Geographic</h3>
-          <p class="padbot_30">Diseñador Grafico,<br> Abr. 2016 – Abr. 2017,<br> Washington, D. C., EE. UU.</p>
+          <p class="padbot_30 grey-text">Diseñador Grafico,<br> Abr. 2016 – Abr. 2017,<br> Washington, D. C., EE. UU.
+          </p>
 
 
         </div>
@@ -317,7 +319,7 @@
 
 
           <h3 class="white-text bottom_15">Discovery Inc.</h3>
-          <p class="padbot_30">Diseñador Grafico,<br> Ene. 2015 - Ene. 2016,<br> Maryland, EE. UU.</p>
+          <p class="padbot_30 grey-text">Diseñador Grafico,<br> Ene. 2015 - Ene. 2016,<br> Maryland, EE. UU.</p>
 
 
         </div>
@@ -347,7 +349,8 @@
 
 
           <h3 class="white-text bottom_15">Corcoran College of Art + Design</h3>
-          <p>Bachiller de Bellas Artes, licenciatura en diseño gráfico, <br> Washington, D. C., EE. UU.<br> Clase
+          <p class="grey-text">Bachiller de Bellas Artes, licenciatura en diseño gráfico, <br> Washington, D. C., EE.
+            UU.<br> Clase
             del 2014</p>
 
 
@@ -398,7 +401,7 @@
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <p class="white-text">
+            <p class="grey-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
         </div>
