--- a/Galaxy.html
+++ b/Galaxy.html
@@ -123,7 +123,7 @@
       <div class="row lightbox-gallery">
 
         <div class="col-lg-10 offset-lg-1 col-md-12 col-sm-12 cl-xs-12">
-          <h2 class="title text-center white-text">Why Agent J got the small gun?</h2>
+          <h2 class="title text-center white-text bottom_30">Why Agent J got the small gun?</h2>
           <p class="white-text bottom_60">Short answer, bad user experience. Thinking as a UX person I
             thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding
             process. You
@@ -199,7 +199,7 @@
                   <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
                 </div>
                 <h2 class="subtitle white-text bottom_30">Agent J</h2>
-                <p class="white-text">In the field things can get tragic pretty quickly. Some people
+                <p class="grey-text">In the field things can get tragic pretty quickly. Some people
                   above me
                   would pay to
                   go back into the field and feel the adrenaline of riskyng one's life. The flying
@@ -218,7 +218,7 @@
                   <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
                 </div>
                 <h2 class="subtitle white-text bottom_30">Supervisor</h2>
-                <p class="project-detail white-text">My peeps on the field are putting their life on the
+                <p class="grey-text">My peeps on the field are putting their life on the
                   line, and
                   as their
                   supervisor
@@ -238,7 +238,7 @@
                   <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
                 </div>
                 <h2 class="subtitle white-text bottom_30">CFO</h2>
-                <p class="white-text">I am the money guy, in my eyes some people in the field think
+                <p class="grey-text">I am the money guy, in my eyes some people in the field think
                   every assigment is a
                   Michael
                   Bey movie.
@@ -273,30 +273,49 @@
             </div>
             <div class="row">
               <div class="col-lg-12 bottom_120">
-                <h2 class="text text-center title">Designing a request management system</h2>
+                <h2 class="text text-center text-white title">Designing a request management system</h2>
               </div>
             </div>
             <!-- Images -->
             <div class="row lightbox-gallery">
+              <!-- Description  -->
+              <div class="col-lg-5">
+                <h4 class="text-white">It starts with the request form</h4>
+                <p class="bottom_30 grey-text">
+                  Here agent J can starts his request, properly, by telling his supervisor about the assignment, when is
+                  it, where is it, and what weapon he would like to use.
+                </p>
+              </div>
+              <!-- Description -->
               <!-- a image -->
-              <div class="col-lg-10 offset-lg-1">
+              <div class="col-lg-7">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/New-Request-Low-Fidelity.png"
                     alt="New Request Low Fidelity">
                 </div>
               </div>
+              <!-- a image -->
             </div>
             <!-- Images -->
-
             <!-- Images -->
             <div class="row lightbox-gallery">
+              <!-- Description  -->
+              <div class="col-lg-5">
+                <h4 class="text-white">Then it goes to the Requests Ledger</h4>
+                <p class="grey-text">
+                  Here users can track the status of a request from begining to end.
+                </p>
+              </div>
+              <!-- Description -->
               <!-- a image -->
-              <div class="col-lg-10 offset-lg-1">
+              <div class="col-lg-7">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/Security-Ledger-Low-Fidelity.png"
                     alt="Request Ledger">
                 </div>
               </div>
+              <!-- an image -->
+
             </div>
             <!-- Images -->
           </div>
@@ -310,9 +329,11 @@
 
         <section data-midnight="dark" class="purple-gradient-galaxy-bg">
           <div class="container project-detail">
-
-
-
+            <div class="row">
+              <div class="col-lg-12 bottom_120">
+                <h4 class="text text-center text-white">The final product</h4>
+              </div>
+            </div>
             <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
               <img class="image" src="img/works/Galaxy/Laptop-with-log-in.svg" alt="Log In">
             </div>
@@ -450,7 +471,7 @@
             </div>
             <!-- Images -->
             <div class="top_60 project-detail col-lg-12">
-              <p class="text-center white-text">Thanks for scrolling this far...now you have to forget
+              <p class="text-center grey-text">Thanks for scrolling this far...now you have to forget
                 what you saw.</p>
             </div>
         </section>
@@ -506,7 +527,7 @@
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <p class="white-text">
+            <p>
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
         </div>
