--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
-          <p class="padtop_60">Hello, my name is Peter. I am Interaction designer that started his career as a curious
+          <p class="padtop_60 grey-text">Hello, my name is Peter. I am Interaction designer that started his career as a
+            curious
             student in art school. That curiosity took me from Graphics to Motion to Interaction. Now, in hindsight,
             I've realized that no matter what hat I wore I found myself crafting experiences–and stories in one way or
             another. To learn more about that journey check out my <a href="https://peterverastegui.wordpress.com/"
@@ -263,7 +264,7 @@
 
 
           <h3 class="white-text bottom_15">FINRA</h3>
-          <p class="padbot_30">Interaction Designer,<br> Feb 2019 – Present,<br> Rockville, MD</p>
+          <p class="padbot_30 grey-text">Interaction Designer,<br> Feb 2019 – Present,<br> Rockville, MD</p>
 
 
         </div>
@@ -271,7 +272,7 @@
 
 
           <h3 class="white-text bottom_15">Subject Matter</h3>
-          <p class="padbot_30">Interaction Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC</p>
+          <p class="padbot_30 grey-text">Interaction Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC</p>
 
 
         </div>
@@ -279,7 +280,7 @@
 
 
           <h3 class="white-text bottom_15">PBS NewsHour</h3>
-          <p class="padbot_30">Motion Designer,<br> Nov 2017 – Jan 2018,<br> Arlington, VA</p>
+          <p class="padbot_30 grey-text">Motion Designer,<br> Nov 2017 – Jan 2018,<br> Arlington, VA</p>
 
 
         </div>
@@ -298,7 +299,7 @@
 
 
           <h3 class="white-text bottom_15">USA Today</h3>
-          <p class="padbot_30">Graphic Designer,<br> Apr 2017 – Jul 2017,<br> Mclean, VA</p>
+          <p class="padbot_30 grey-text">Graphic Designer,<br> Apr 2017 – Jul 2017,<br> Mclean, VA</p>
 
 
         </div>
@@ -306,7 +307,7 @@
 
 
           <h3 class="white-text bottom_15">National Geographic</h3>
-          <p class="padbot_30">Graphic Designer,<br> Apr 2016 – Apr 2017,<br> Washington, DC</p>
+          <p class="padbot_30 grey-text">Graphic Designer,<br> Apr 2016 – Apr 2017,<br> Washington, DC</p>
 
 
         </div>
@@ -314,7 +315,7 @@
 
 
           <h3 class="white-text bottom_15">Discovery</h3>
-          <p class="padbot_30">Graphic Designer,<br> Jan 2015 – Jan 2016,<br> Silver Spring, MD</p>
+          <p class="padbot_30 grey-text">Graphic Designer,<br> Jan 2015 – Jan 2016,<br> Silver Spring, MD</p>
 
 
         </div>
@@ -341,17 +342,10 @@
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-
-
           <h3 class="white-text bottom_15">Corcoran College of Art + Design</h3>
-          <p>Bachelor of Fine Art & Graphic Design<br> 2010 - 2014</p>
-
-
+          <p class="grey-text">Bachelor of Fine Art & Graphic Design<br> 2010 - 2014</p>
         </div>
-
-
       </div>
-
       <div class="row lightbox-gallery top_60">
         <!--  ================== SPACE DIV ===================== -->
         <div class="col-lg-4"></div>
@@ -363,14 +357,9 @@
               <i class="icon ion-md-arrow-down"></i>
             </button>
           </a>
-
         </div>
-
       </div>
-
-
     </div>
-
     <!-- footer -->
     <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
       <div class="container project-detail padtop_15">
