New description on project

--- a/Galaxy.html
+++ b/Galaxy.html
@@ -279,16 +279,15 @@
             <!-- Images -->
             <div class="row lightbox-gallery">
               <!-- Description  -->
-              <div class="col-lg-5">
+              <div class="col-lg-4 offset-lg-1">
                 <h4 class="text-white">It starts with the request form</h4>
                 <p class="bottom_30 grey-text">
-                  Here agent J can starts his request, properly, by telling his supervisor about the assignment, when is
-                  it, where is it, and what weapon he would like to use.
+                  Here agent J can starts his request, properly, by telling his supervisor about the assignment.
                 </p>
               </div>
               <!-- Description -->
               <!-- a image -->
-              <div class="col-lg-7">
+              <div class="col-lg-5 offset-1">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/New-Request-Low-Fidelity.png"
                     alt="New Request Low Fidelity">
@@ -298,17 +297,10 @@
             </div>
             <!-- Images -->
             <!-- Images -->
-            <div class="row lightbox-gallery">
-              <!-- Description  -->
-              <div class="col-lg-5">
-                <h4 class="text-white">Then it goes to the Requests Ledger</h4>
-                <p class="grey-text">
-                  Here users can track the status of a request from begining to end.
-                </p>
-              </div>
-              <!-- Description -->
+            <div class="row lightbox-gallery top_60">
+
               <!-- a image -->
-              <div class="col-lg-7">
+              <div class="col-lg-5 offset-lg-1">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/Security-Ledger-Low-Fidelity.png"
                     alt="Request Ledger">
@@ -316,8 +308,16 @@
               </div>
               <!-- an image -->
 
+              <!-- Description  -->
+              <div class="col-lg-4">
+                <h4 class="text-white">Then it goes to the Requests Ledger</h4>
+                <p class="grey-text">
+                  Here agent J can track the status of his request from begining to end.
+                </p>
+              </div>
+              <!-- Description -->
+
             </div>
-            <!-- Images -->
           </div>
         </section>
 
@@ -343,8 +343,18 @@
           <div class="container">
             <!-- Images -->
             <div class="row lightbox-gallery">
+              <!-- Description  -->
+              <div class="col-lg-10 offset-lg-1">
+                <h4 class="text-white">The Office Profile</h4>
+                <p class="bottom_60 white-text">
+                  After loging in, agent J will locate his homebase office, he then would go to the Resource Request
+                  section of his office's profile. Lastly, in the actions panel, he would click on "Resource Request" to
+                  open a new request form.
+                </p>
+              </div>
+              <!-- Description -->
               <!-- a image -->
-              <div class="col-lg-12">
+              <div class="col-lg-10 offset-lg-1">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/Facility Profile.png" alt="Facility Profile">
                 </div>
@@ -354,8 +364,19 @@
 
             <!-- Images -->
             <div class="row lightbox-gallery">
+
+              <!-- Description  -->
+              <div class="col-lg-10 offset-lg-1 top_60">
+                <h4 class="text-white">The Request Form</h4>
+                <p class="bottom_60 white-text">
+                  Here agen J can speall out all the details of his assigment. Things like when, where, and; while he is
+                  at it, he can use a handy feature that shows him a list of all the arms he can choose from. No
+                  surprises here.
+                </p>
+              </div>
+              <!-- Description -->
               <!-- a image -->
-              <div class="col-lg-12">
+              <div class="col-lg-10 offset-lg-1">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/New Request.png" alt="New Request">
                 </div>
@@ -375,7 +396,7 @@
             <!-- Images -->
             <div class="row lightbox-gallery">
               <!-- a image -->
-              <div class="col-lg-12">
+              <div class="col-lg-10 offset-lg-1">
                 <div class="image">
                   <img class="round-corners" src="img/works/Galaxy/Screens/Rejecting-Approving request.png"
                     alt="Approve/Deny">
@@ -449,7 +470,7 @@
           <div class="container">
             <div class="row lightbox-gallery">
               <!-- a image -->
-              <div class="col-lg-12">
+              <div class="col-lg-10 offset-lg-1">
                 <div class="image top_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/Villain-profile.png"
                     alt="Profile of a villain">
@@ -478,21 +499,6 @@
 
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- Next -->
