--- a/es-Galaxy.html
+++ b/es-Galaxy.html
@@ -262,7 +262,7 @@
             <!-- Images -->
             <div class="row lightbox-gallery">
               <!-- Description  -->
-              <div class="col-lg-5">
+              <div class="col-lg-4 offset-lg-1">
                 <h4 class="text-white">Todo comienza con un formulario</h4>
                 <p class="bottom_30 grey-text">
                   Aquí el agente J puede comenzar su solicitud, apropiadamente, al proveer detalles de su misión como:
@@ -271,7 +271,7 @@
               </div>
               <!-- Description -->
               <!-- a image -->
-              <div class="col-lg-7">
+              <div class="col-lg-5 offset-lg-1">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/New-Request-Low-Fidelity.png"
                     alt="New Request Low Fidelity">
@@ -281,10 +281,20 @@
             </div>
             <!-- Images -->
             <!-- Images -->
-            <div class="row lightbox-gallery">
+            <div class="row lightbox-gallery top_60">
+
+              <!-- a image -->
+              <div class="col-lg-5 offset-lg-1">
+                <div class="image bottom_60">
+                  <img class="round-corners" src="img/works/Galaxy/Screens/Security-Ledger-Low-Fidelity.png"
+                    alt="Request Ledger">
+                </div>
+              </div>
+              <!-- an image -->
+
               <!-- Description  -->
-              <div class="col-lg-5">
-                <h4 class="text-white">Luego continua en el registro de peticiones</h4>
+              <div class="col-lg-4">
+                <h4 class="text-white">Luego continua en el registro de solicitudes</h4>
                 <p class="grey-text">
                   Aquí los usuarios pueden rastrear el estatus de sus solicitudes, desde el momento en que se envían
                   hasta
@@ -292,14 +302,6 @@
                 </p>
               </div>
               <!-- Description -->
-              <!-- a image -->
-              <div class="col-lg-7">
-                <div class="image bottom_60">
-                  <img class="round-corners" src="img/works/Galaxy/Screens/Security-Ledger-Low-Fidelity.png"
-                    alt="Request Ledger">
-                </div>
-              </div>
-              <!-- an image -->
 
             </div>
             <!-- Images -->
@@ -331,7 +333,7 @@
             <!-- Images -->
             <div class="row lightbox-gallery">
               <!-- a image -->
-              <div class="col-lg-12">
+              <div class="col-lg-10 offset-lg-1">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/Facility Profile.png" alt="Facility Profile">
                 </div>
@@ -342,7 +344,7 @@
             <!-- Images -->
             <div class="row lightbox-gallery">
               <!-- a image -->
-              <div class="col-lg-12">
+              <div class="col-lg-10 offset-lg-1">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/New Request.png" alt="New Request">
                 </div>
@@ -352,7 +354,7 @@
             <!-- Images -->
             <div class="row lightbox-gallery">
               <!-- a image -->
-              <div class="col-lg-12">
+              <div class="col-lg-10 offset-lg-1">
                 <div class="image bottom_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/Request Ledger.png" alt="Request Ledger">
                 </div>
@@ -362,7 +364,7 @@
             <!-- Images -->
             <div class="row lightbox-gallery">
               <!-- a image -->
-              <div class="col-lg-12">
+              <div class="col-lg-10 offset-lg-1">
                 <div class="image">
                   <img class="round-corners" src="img/works/Galaxy/Screens/Rejecting-Approving request.png"
                     alt="Approve/Deny">
@@ -436,7 +438,7 @@
           <div class="container">
             <div class="row lightbox-gallery">
               <!-- a image -->
-              <div class="col-lg-12">
+              <div class="col-lg-10 offset-lg-1">
                 <div class="image top_60">
                   <img class="round-corners" src="img/works/Galaxy/Screens/Villain-profile.png"
                     alt="Profile of a villain">
