--- a/toucan/documentation/index.html
+++ b/toucan/documentation/index.html
@@ -82,7 +82,7 @@
         <!-- Overview -->
         <div id="overview" class="padtop_90">
           <h1 class="text-color padbot_30">Overview</h1>
-          <p class="text-color">Thanks for purchasing this template, this is how everything is organized:</p>
+          <p class="text-color">Thanks for giving this template a chance, this is how everything is organized:</p>
           <pre class="bg-pale-night rounded p-2">
                             <code class="text-white flex-wrap">
     toucan
